# SimplePortfolio

./: CMakeLists.txt  Makefile  README.md
lib/executables/: CellularAutomata
src/: main.c  test.c
